examples/test/testpolicy15311.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15311
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key2: value29
      key23: value42
      key6: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value18
          key35: value12
      podSelector:
        matchLabels:
          key9: value40
          key5: value5
